--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,6 @@
 [defaults]
 retry_files_enabled = False
-#callback_whitelist = profile_tasks
+inventory = ./inventory/headnode
 
 [ssh_connection]
-ssh_args = -F ./ssh.cfg -o ControlMaster=auto -o ControlPersist=30m
 control_path = ~/.ssh/ansible-%%r@%%h:%%p
