--- a/roles/ohpc_config/tasks/main.yml
+++ b/roles/ohpc_config/tasks/main.yml
@@ -35,13 +35,13 @@
      service: name=httpd state=restarted
 
    - name: exportfs home entry on headnode
-     lineinfile: line="/home {{ private_network }}\{{ private_network_mask }}(rw,no_subtree_check,fsid=10,no_root_squash)" dest=/etc/exports state=present
+     lineinfile: line="/home {{ private_network }}/{{ private_network_mask }}(rw,no_subtree_check,fsid=10,no_root_squash)" dest=/etc/exports state=present
 
    - name: exportfs opt entry on headnode
-     lineinfile: line="/opt/ohpc/pub {{ private_network }}\{{ private_network_mask }}(ro,no_subtree_check,fsid=11)" dest=/etc/exports state=present
+     lineinfile: line="/opt/ohpc/pub {{ private_network }}/{{ private_network_mask }}(ro,no_subtree_check,fsid=11)" dest=/etc/exports state=present
 
    - name: exportfs software dir entry on headnode
-     lineinfile: line="/export {{ private_network }}\{{ private_network_mask }}(ro,no_subtree_check,fsid=12)" dest=/etc/exports state=present
+     lineinfile: line="/export {{ private_network }}/{{ private_network_mask }}(ro,no_subtree_check,fsid=12)" dest=/etc/exports state=present
 
    - name: exportfs reload
      command: exportfs -a
