--- a/roles/login_build_vnfs/tasks/main.yml
+++ b/roles/login_build_vnfs/tasks/main.yml
@@ -12,12 +12,18 @@
    - name: copy resolve.conf into image
      copy: src=/etc/resolv.conf dest="{{ login_chroot_loc }}/etc/resolv.conf" #"
 
-   - name: yum install into the image chroot
-     command: yum -y --installroot={{ login_chroot_loc }} install chrony kernel lmod-ohpc grub2 glibc-devel glibc-headers kernel-devel kernel-headers dkms
-#" for vim
+   - name: create slurm group
+     command: chroot '{{ login_chroot_loc }}' groupadd -g '{{slurm_gid}}' slurm
+
+   - name: create slurm user
+     command: chroot '{{ login_chroot_loc }}' useradd -u '{{slurm_uid}}' -g slurm -d /etc/slurm -M -r -s /sbin/nologin -c 'SLURM resource manager'  slurm
 
    - name: yum install slurm client into image
      command: yum -y --installroot={{ login_chroot_loc }} groupinstall ohpc-slurm-client
+
+   - name: yum install into the image chroot
+     command: yum -y --installroot={{ login_chroot_loc }} install chrony kernel lmod-ohpc grub2 glibc-devel glibc-headers kernel-devel kernel-headers dkms
+#" for vim
 #" for vim
 #
 ##FIREWALL STUFF - DON'T LEAVE COMMENTED OUT
