--- a/roles/compute_build_vnfs/tasks/main.yml
+++ b/roles/compute_build_vnfs/tasks/main.yml
@@ -32,6 +32,13 @@
      command: yum -y --installroot={{ compute_chroot_loc }} install chrony kernel lmod-ohpc grub2
 #" for vim
 
+   - name: get the currently installed kernel
+     shell: chroot '{{ compute_chroot_loc }}' rpm -q --qf '%{version}-%{release}.%{arch}\n' kernel | tail -1
+     register: kernel_ver_output
+
+   - set_fact: 
+         kernel_ver: '{{ kernel_ver_output.stdout }}'
+
 #" for vim
 
    - name: copy ssh keys over
@@ -67,8 +74,18 @@
    - name: wwimport file into image (munge)
      command: wwsh file import /etc/munge/munge.key
 
+#   - name: print kernel version
+#     debug:
+#       var: kernel_ver
+   
    - name: build bootstrap image
-     shell: wwbootstrap {{ build_kernel_ver }}
+     shell: wwbootstrap --output=/tmp/compute_'{{ kernel_ver }}'.wwbs  --chroot='{{ compute_chroot_loc }}' '{{ kernel_ver }}' > /tmp/testlog
+
+#' for vim
+
+   - name: import bootstrap image
+     shell: wwsh bootstrap import /tmp/compute_'{{ kernel_ver }}'.wwbs  --name=compute_'{{ kernel_ver }}'
+
 
    - name: build the vnfs 
      command: wwvnfs -y --chroot "{{ compute_chroot_loc }}/"
